adding Azure Storage blob Implmentation

--- a/ELearning/appsettings.Development.json
+++ b/ELearning/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "ELearningDB": "Server=MSI\\SQLEXPRESS;Database=Aspire;User Id=sa;password=motaz123;Trusted_Connection=True;MultipleActiveResultSets=true;"
-  }
+  },
+  "AzureStorageConnectionString": "",
+  "StripeSecretKey": "sk_test_jWDarjtT1zdp7dc4eC39HqLy"
+
 }
